--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
  body {
-    background-color:  #1d1d1d;
+    background-color: #8a0a0a;
     color: aliceblue;
     font-family: "Bai Jamjuree", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
+ }
+
+ button {
+    background-color: #f04444;
+    color: aliceblue;
  }
