--- a/style.css
+++ b/style.css
@@ -1,35 +1,33 @@
 body {
-  background-color: #a30404;
-  color: #000000;
-  font-family: "Yusei Magic", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
-  margin: 15%;
+    background-color: #1D4221;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
 }
 
 button {
-  color: #ffffff;
-  border-color: #a70000;
-  font-family: "Yusei Magic", sans-serif;
-  background-color: #e00c0c;
+    background-color: #64A712;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
 }
 
 .passo {
-
-  display: none;
+    display: none;
 }
 
 .passo.ativo {
-  display: block;
+    display:block;
 }
 
 main {
-  text-align: center;
-  max-width: 90%;
+    text-align: center;
+    max-width: 90%;
 }
 
 img {
-  max-width: 80%;
+    max-width: 90%;
 }
